Namespacing and other issues for TouchPoint

--- a/assets/style/main.less
+++ b/assets/style/main.less
@@ -91,7 +91,7 @@ main#site-content {
     margin:0;
   }
 
-  header {
+  header.page-header {
     background-size: cover;
     background-position: center center;
     width: 100vw;
